--- a/tablet.css
+++ b/tablet.css
@@ -1,13 +1,12 @@
 @media (min-width: 600px) {
+  .menu__list {
+    font-size: var(--font-size-4);
+  }
   .logo {
     height: 7rem;
   }
   .header--4 {
     font-size: 20px;
-  }
-
-  .menu__list {
-    font-size: var(--font-size-4);
   }
 
   .info__icon {
@@ -20,6 +19,20 @@
     overflow: hidden;
     width: 100%;
     background-image: url(Identyfikacja/plant_pattern.jpg);
+  }
+
+  .info--1,
+  .info--4 {
+    /* background-color: var(--fourth-color); */
+    background-color: #acc48b;
+    color: var(--primary-color);
+  }
+
+  .info--2,
+  .info--3 {
+    /* background-color: var(--fifth-color); */
+    background-color: #4e6149;
+    color: var(--sixth-color);
   }
 
   .info__item {
@@ -67,5 +80,17 @@
     padding: 20px;
     width: 50%;
     height: auto;
+  }
+  .moreIcon--1,
+  .moreIcon--4,
+  .moreIcon--5,
+  .moreIcon--8 {
+    color: var(--primary-color);
+  }
+  .moreIcon--2,
+  .moreIcon--3,
+  .moreIcon--6,
+  .moreIcon--7 {
+    color: var(--fourth-color);
   }
 }
