--- a/tablet.css
+++ b/tablet.css
@@ -51,6 +51,19 @@
   .aboutUs__content {
     width: 50%;
   }
+
+  .content--1,
+  .content--4 {
+    background-color: #acc48b;
+    color: var(--primary-color);
+  }
+
+  .content--2,
+  .content--3 {
+    background-color: #4e6149;
+    color: var(--sixth-color);
+  }
+
   .moreInfo__wrapper {
     display: flex;
     flex-direction: row;
