--- a/screen.css
+++ b/screen.css
@@ -17,4 +17,16 @@
   .aboutUs__content {
     width: 25%;
   }
+
+  .content--1,
+  .content--3 {
+    background-color: #acc48b;
+    color: var(--primary-color);
+  }
+
+  .content--2,
+  .content--4 {
+    background-color: #4e6149;
+    color: var(--sixth-color);
+  }
 }
