ZE-AboutUs3 - zmiana kolorystyki ikon sociali

--- a/main.css
+++ b/main.css
@@ -285,11 +285,11 @@ body {
 }
 
 .social__facebook {
-  color: #00acee;
+  color: #4267b2;
 }
 
 .social__instagram {
-  color: #3f5f9b;
+  color: #dd2a7b;
 }
 
 .social__twitter {
