--- a/screen.css
+++ b/screen.css
@@ -13,4 +13,8 @@
     background-color: var(--fifth-color);
     color: var(--sixth-color);
   }
+
+  .moreInfoBox {
+    padding: 1rem 4rem;
+  }
 }
