--- a/main.css
+++ b/main.css
@@ -157,7 +157,7 @@ body {
 .moreInfo__title {
   font-size: var(--font-size-2);
   font-family: var(--primary-font);
-  padding: 32px 0;
+  padding: 2rem 0;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 8px;
