--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ body {
   display: flex;
   align-items: center;
   font-family: var(--secondary-font);
-  padding: 20px;
+  padding: 1rem 1rem;
   width: 100%;
   height: auto;
   text-align: center;
