--- a/tablet.css
+++ b/tablet.css
@@ -1,7 +1,25 @@
 @media (min-width: 576px) {
-  .menu__list {
-    font-size: var(--font-size-4);
+  .menu {
+    display: flex;
   }
+
+  .menu__list {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    max-height: none;
+    flex-grow: 1;
+    border: none;
+  }
+
+  .menu__icon {
+    display: none;
+  }
+
+  .link {
+    border-bottom: none;
+  }
+
   .logo {
     height: 7rem;
   }
