ZE-Formularz2 - zmiana klas w main

--- a/main.css
+++ b/main.css
@@ -58,7 +58,7 @@ body {
 
 .nav__icon:before {
   background: var(--third-color);
-  content: "";
+  content: '';
   display: block;
   height: 100%;
   width: 100%;
@@ -70,7 +70,7 @@ body {
 
 .nav__icon:after {
   background: var(--third-color);
-  content: "";
+  content: '';
   display: block;
   height: 100%;
   width: 100%;
@@ -405,7 +405,7 @@ body {
   padding: 0.5rem 0;
 }
 
-.input {
+.newsletter input {
   padding: 1.1rem 1.1rem;
   font-size: var(--font-size-2);
 }
@@ -425,21 +425,21 @@ body {
   font-size: var(--font-size-2);
 }
 
-input[type="checkbox"] + label {
+.newsletter input[type='checkbox'] + label {
   display: block;
   margin: 0.2rem;
   cursor: pointer;
   padding: 0.2rem;
 }
 
-input[type="checkbox"] {
+.newsletter input[type='checkbox'] {
   display: none;
 }
 
-input[type="checkbox"] + label:before {
+.newsletter input[type='checkbox'] + label:before {
   display: inline-block;
   background-color: #fff;
-  content: "\2714";
+  content: '\2714';
   border: 0.1rem solid var(--primary-color);
   border-radius: 0.2rem;
   width: 1rem;
@@ -452,11 +452,11 @@ input[type="checkbox"] + label:before {
   transition: 0.1s;
 }
 
-input[type="checkbox"] + label:active:before {
+.newsletter input[type='checkbox'] + label:active:before {
   transform: scale(0);
 }
 
-input[type="checkbox"]:checked + label:before {
+.newsletter input[type='checkbox']:checked + label:before {
   background-color: var(--fourth-color);
   color: var(--primary-color);
   border-color: var(--primary-color);
