--- a/main.css
+++ b/main.css
@@ -416,13 +416,29 @@ body {
   font-size: var(--font-size-2);
   line-height: 2;
 }
+.newsletter__button {
+  border-radius: 2px;
+  padding: 6px 12px;
+  height: 4rem;
+  width: 12rem;
+  border-radius: 8px;
+  border: solid transparent;
+  box-shadow: 1px 7px 25px -2px rgba(0, 0, 0, 0.75);
 
-.btn-default {
+  font-family: var(--secondary-font);
+  font-size: 1.5rem;
+  background-color: var(--primary-color);
+  text-transform: uppercase;
+  cursor: pointer;
+  touch-action: manipulation;
   color: var(--sixth-color);
   align-self: center;
-  width: 200px;
-  height: 2.5rem;
-  font-size: var(--font-size-2);
+}
+
+.newsletter__button:hover {
+  background-color: var(--fifth-color);
+  opacity: 0.9;
+  transition: 0.2s;
 }
 
 .newsletter input[type='checkbox'] + label {
