--- a/main.css
+++ b/main.css
@@ -467,6 +467,7 @@ body {
   margin: 0.2rem;
   cursor: pointer;
   padding: 0.2rem;
+  line-height: 1.7rem;
 }
 
 .newsletter input[type='checkbox'] {
@@ -477,15 +478,16 @@ body {
   display: inline-block;
   background-color: #fff;
   content: '\2714';
-  border: 0.1rem solid var(--primary-color);
+  border: 0.1rem solid var(--fifth-color);
   border-radius: 0.2rem;
   width: 1.1rem;
   height: 1.1rem;
   padding-bottom: 0.2rem;
   margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
   vertical-align: bottom;
   color: transparent;
-  transform: translateY(0.3rem);
+  transform: translateY(0.5rem);
   transition: 0.3s;
 }
 
@@ -496,7 +498,7 @@ body {
 .newsletter input[type='checkbox']:checked + label:before {
   background-color: var(--fourth-color);
   color: var(--primary-color);
-  border-color: var(--primary-color);
+  border-color: var(--fifth-color);
 }
 
 .newsletter__top__item {
