--- a/main.css
+++ b/main.css
@@ -431,9 +431,9 @@ body {
 
 .newsletter__wrapper > p {
   padding-top: 1rem;
-  font-family: var(--secondary-font);
+  font-family: var(--primary-font);
   font-size: var(--font-size-2);
-  line-height: 2;
+  line-height: 1.8rem;
 }
 
 .newsletter__button {
@@ -446,8 +446,8 @@ body {
   border: solid transparent;
   box-shadow: 1px 7px 25px -2px rgba(0, 0, 0, 0.75);
 
-  font-family: var(--secondary-font);
-  font-size: 1.5rem;
+  font-family: var(--primary-font);
+  font-size: var(--font-size-3);
   background-color: var(--primary-color);
   text-transform: uppercase;
   cursor: pointer;
@@ -467,7 +467,8 @@ body {
   margin: 0.2rem;
   cursor: pointer;
   padding: 0.2rem;
-  line-height: 1.7rem;
+  line-height: 1.5rem;
+  font-size: 1rem;
 }
 
 .newsletter input[type='checkbox'] {
