--- a/main.css
+++ b/main.css
@@ -108,7 +108,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(Identyfikacja/background.jpeg);
+  /* background-image: url(Identyfikacja/background.jpeg); */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
+    url(Identyfikacja/background.jpeg);
+
   background-size: cover;
   background-attachment: fixed;
 }
