--- a/main.css
+++ b/main.css
@@ -275,7 +275,7 @@ body {
   align-items: center;
   height: auto;
   text-align: center;
-  padding: 0.5rem;
+  padding: 2rem 1rem 1rem 1rem;
 }
 
 .content--2,
@@ -290,7 +290,7 @@ body {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  padding-bottom: 2rem;
+  padding: 2rem 0;
   background-repeat: no-repeat;
 }
 
