--- a/main.css
+++ b/main.css
@@ -368,6 +368,7 @@ body {
 .newsletter {
   display: flex;
   flex-direction: column;
+  width: 100%;
   background-image: url(Identyfikacja/background.jpeg);
   background-position: center;
   background-size: cover;
@@ -379,11 +380,13 @@ body {
 }
 
 .newsletter__title {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   border-bottom: solid var(--primary-color) 3px;
   font-family: var(--primary-font);
   text-transform: uppercase;
   letter-spacing: 0.2rem;
-  font-weight: bold;
   font-size: var(--font-size-2);
   padding: 1rem;
   word-wrap: break-word;
@@ -394,7 +397,6 @@ body {
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.9);
   width: 100%;
-  max-width: 900px;
   padding: 0.5rem 1rem;
   border-radius: 2rem;
   word-wrap: break-word;
@@ -403,7 +405,6 @@ body {
 .newsletter__input {
   display: flex;
   flex-direction: column;
-  max-width: 900px;
   padding: 1rem 2rem;
 }
 
