--- a/main.css
+++ b/main.css
@@ -438,17 +438,20 @@ body {
 }
 
 .newsletter__button {
-  border-radius: 2px;
-  padding: 6px 12px;
-  margin-right: 2rem;
-  height: 4rem;
-  width: 12rem;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   border-radius: 8px;
+  padding: 1.1rem 1rem;
+  margin-right: 2rem;
+  height: 3.5ze-Formrem;
+  width: 8rem;
   border: solid transparent;
   box-shadow: 1px 7px 25px -2px rgba(0, 0, 0, 0.75);
 
   font-family: var(--primary-font);
-  font-size: var(--font-size-3);
+  font-size: var(--font-size-2);
   background-color: var(--primary-color);
   text-transform: uppercase;
   cursor: pointer;
