--- a/main.css
+++ b/main.css
@@ -445,7 +445,7 @@ body {
   border-radius: 8px;
   padding: 1.1rem 1rem;
   margin-right: 2rem;
-  height: 3.5ze-Formrem;
+  height: 3.5rem;
   width: 8rem;
   border: solid transparent;
   box-shadow: 1px 7px 25px -2px rgba(0, 0, 0, 0.75);
@@ -467,7 +467,11 @@ body {
 }
 
 .newsletter input[type='checkbox'] + label {
-  display: block;
+  /* display: block; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: top;
   margin: 0.2rem;
   cursor: pointer;
   padding: 0.2rem;
@@ -480,16 +484,15 @@ body {
 }
 
 .newsletter input[type='checkbox'] + label:before {
-  display: inline-block;
+  display: flex;
   background-color: #fff;
   content: '\2714';
   border: 0.1rem solid var(--fifth-color);
   border-radius: 0.2rem;
   width: 1.1rem;
-  height: 1.1rem;
-  padding-bottom: 0.2rem;
+  height: 0.9rem;
+  padding-bottom: 0.4rem;
   margin-right: 0.5rem;
-  margin-bottom: 0.5rem;
   vertical-align: bottom;
   color: transparent;
   transform: translateY(0.5rem);
