--- a/main.css
+++ b/main.css
@@ -378,6 +378,7 @@ body {
   padding: 4rem 2rem;
   font-family: var(--primary-font);
 }
+/**Stylowanie tytułu*/
 
 .newsletter__title {
   display: flex;
@@ -391,6 +392,7 @@ body {
   padding: 1rem;
   word-wrap: break-word;
 }
+/**Stylowanie wrappera*/
 
 .newsletter__wrapper {
   display: flex;
@@ -401,6 +403,7 @@ body {
   border-radius: 2rem;
   word-wrap: break-word;
 }
+/**Stylowanie inputów*/
 
 .newsletter__input {
   display: flex;
@@ -413,6 +416,7 @@ body {
   padding: 1.1rem 2.1rem;
   font-size: var(--font-size-2);
 }
+/**Stylowanie ikon*/
 
 .fa-user {
   position: absolute;
@@ -430,6 +434,8 @@ body {
   color: var(--fourth-color);
 }
 
+/**Stylowanie paragrafu*/
+
 .newsletter__wrapper > p {
   padding-top: 1rem;
   font-family: var(--primary-font);
@@ -437,6 +443,7 @@ body {
   line-height: 1.8rem;
 }
 
+/**Stylowanie przycisku*/
 .newsletter__button {
   display: block;
   justify-content: center;
@@ -465,6 +472,7 @@ body {
   opacity: 0.9;
   transition: 0.2s;
 }
+/**Stylowanie inputu - checkbox*/
 
 .newsletter input[type='checkbox'] + label {
   display: flex;
@@ -507,6 +515,7 @@ body {
   color: var(--primary-color);
   border-color: var(--fifth-color);
 }
+/**Stylowanie ikony 'Do góry'*/
 
 .newsletter__top__item {
   color: #fff;
