--- a/main.css
+++ b/main.css
@@ -408,7 +408,7 @@ body {
 .newsletter__input {
   display: flex;
   flex-direction: column;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
 }
 
 .newsletter input {
@@ -418,20 +418,16 @@ body {
 }
 /**Stylowanie ikon*/
 
-.fa-user {
-  position: absolute;
-  margin-top: 0.6rem;
+.newsletter__icon {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.1rem;
   margin-left: 1.9rem;
-  padding-top: 0.5rem;
   color: var(--fourth-color);
-}
-
-.fa-envelope-open {
   position: absolute;
-  margin-top: 0.6rem;
-  margin-left: 1.9rem;
-  padding-top: 0.5rem;
-  color: var(--fourth-color);
 }
 
 /**Stylowanie paragrafu*/
@@ -473,16 +469,21 @@ body {
   transition: 0.2s;
 }
 /**Stylowanie inputu - checkbox*/
-
+.box {
+  width: 90%;
+  padding: 0.5rem;
+}
 .newsletter input[type='checkbox'] + label {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  flex-direction: row;
   justify-content: center;
   align-items: top;
+  text-align: center;
   margin: 0.2rem;
   cursor: pointer;
   padding: 0.2rem;
-  line-height: 1.5rem;
   font-size: 1rem;
 }
 
@@ -496,11 +497,13 @@ body {
   content: '\2714';
   border: 0.1rem solid var(--fifth-color);
   border-radius: 0.2rem;
-  width: 1.1rem;
-  height: 0.9rem;
-  padding-bottom: 0.4rem;
-  margin-right: 0.5rem;
-  vertical-align: bottom;
+  width: 1rem;
+  height: 1rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.1rem;
+  margin-right: 0.2rem;
+  margin-left: 1rem;
+  vertical-align: center;
   color: transparent;
   transform: translateY(0.5rem);
   transition: 0.3s;
