--- a/screen.css
+++ b/screen.css
@@ -40,4 +40,20 @@
     background-color: #4e6149;
     color: var(--sixth-color);
   }
+
+  .newsletter__title {
+    width: 80%;
+  }
+  .newsletter__wrapper > p {
+    width: 80%;
+  }
+  .newsletter__wrapper {
+    width: 45%;
+  }
+  .newsletter__input {
+    width: 70%;
+  }
+  .box {
+    width: 80%;
+  }
 }
